// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OverlayContainer should render a default component 1`] = `
<div
  className="overlay-container"
>
  <div
    className="container-content"
    data-terra-overlay-container-content={true}
  />
</div>
`;

exports[`OverlayContainer should render when overlay and children are provided 1`] = `
<div
  className="overlay-container"
>
  <Overlay
    backgroundStyle="light"
    isOpen={false}
    isRelativeToContainer={false}
    isScrollable={false}
    rootSelector="#root"
    zIndex="100"
  />
  <div
    className="container-content"
    data-terra-overlay-container-content={true}
  >
    <div>
      Some Text Content
    </div>
  </div>
</div>
`;

exports[`OverlayContainer should render when overlay is provided 1`] = `
<div
  className="overlay-container user-defined-class"
>
  <Overlay
    backgroundStyle="light"
    isOpen={false}
    isRelativeToContainer={false}
    isScrollable={false}
    rootSelector="#root"
    zIndex="100"
  />
  <div
    className="container-content"
    data-terra-overlay-container-content={true}
  >
    Some Text Content
  </div>
</div>
`;
